<resources>
    <string name="app_name">Card Game</string>
    <string name="button_start">Start!</string>
    <string name="name"></string>
    <string name="ProfilePicture">Choose your Profile picture</string>
    <string name="Button_settings">Profile Settings</string>
    <string name="Button_score_table">Score Table</string>
    <string name="button_end">End Game</string>
    <string name="text_view">Choose the option below</string>
    <string name="Main_menu">Main menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
